--- a/src/pages/landing-page/components/top-parallax.scss
+++ b/src/pages/landing-page/components/top-parallax.scss
@@ -22,8 +22,8 @@
   width: 100%;
 
   > .ui-container {
-    margin-top: 140px;
-    margin-bottom: 140px;
+    margin-top: 90px;
+    margin-bottom: 90px;
   }
   p.parallax-header {
     font-weight: 400;
